Fix alignment, add styles, debug issues

--- a/app/assets/stylesheets/animals.scss
+++ b/app/assets/stylesheets/animals.scss
@@ -1,3 +1,46 @@
-// Place all the styles related to the Animals controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  display: flex;
+  justify-content: center;
+  background-image: url(./images/giraffe_water.jpg);
+  background-repeat: no-repeat;
+  background-size: 1440px 100%;
+}
+
+h2 {
+  font-size: 2.5rem;
+  width: 150px;
+  height: 100px;
+}
+
+h3 {
+  font-size: 2rem;
+  width: 155px;
+  height: 100px;
+}
+
+#mango {
+  border: 3px solid white;
+  border-radius: 5px;
+  color: white;
+}
+
+#submit {
+  border: 3px solid #af11af;
+  background-color: rgba(150, 20, 200, 0.3);
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  padding-top: 1rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
