--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -1,19 +1,23 @@
 .alert {
   position: relative;
-  padding: .75rem 1.25rem;
+  width: 300px;
+  height: 100px;
+  padding: 1rem 1rem;
   margin-bottom: 1rem;
   border: 1px solid transparent;
   border-radius: .25rem;
 }
 
 .alert-success, .alert-notice {
-  color: #000;
-  background-color: #55cc55;
-  border-color: #000;
+  color: white;
+  font-size: 1.3rem;
+  background-color: rgba(0, 250, 0, 0.3);
+  border-color: #82ee82;
 }
 
 .alert-error, .alert-alert {
-  color: #721c24;
-  background-color: #f8d7da;
-  border-color: #f5c6cb;
+  color: white;
+  font-size: 1.3rem;
+  background-color: rgba(250, 0, 0, 0.3);
+  border-color: #ee4201;
 }
